--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "NLM UA-Systems",
   "license": "ISC",
   "devDependencies": {
+    "@openzeppelin/contracts": "^3.0.1",
     "@openzeppelin/test-helpers": "^0.5.6"
   }
 }
